--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                         </thead>
 
                         <tbody id="first-section-tb">
+                            <!-- Table rows are inserted in index.js -->
                         </tbody>
                     </table>
                 
